// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoLaTeX should render expressions with "$" delimiter 1`] = `
<div
  class=""
>
  <span>
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math>
          <semantics>
            <mrow>
              <mfrac>
                <mi>
                  a
                </mi>
                <mi>
                  b
                </mi>
              </mfrac>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\frac{a}{b}
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height: 1.040392em; vertical-align: -0.345em;"
          />
          <span
            class="mord"
          >
            <span
              class="mopen nulldelimiter"
            />
            <span
              class="mfrac"
            >
              <span
                class="vlist-t vlist-t2"
              >
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.695392em;"
                  >
                    <span
                      class=""
                      style="top: -2.6550000000000002em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            b
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class=""
                      style="top: -3.23em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="frac-line"
                        style="border-bottom-width: 0.04em;"
                      />
                    </span>
                    <span
                      class=""
                      style="top: -3.394em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="vlist-s"
                  >
                    ​
                  </span>
                </span>
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.345em;"
                  >
                    <span
                      class=""
                    />
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mclose nulldelimiter"
            />
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`AutoLaTeX should render expressions with "$$" delimiter 1`] = `
<div
  class=""
>
  <span>
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math>
            <semantics>
              <mrow>
                <mfrac>
                  <mi>
                    a
                  </mi>
                  <mi>
                    b
                  </mi>
                </mfrac>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                \\frac{a}{b}
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height: 1.7935600000000003em; vertical-align: -0.686em;"
            />
            <span
              class="mord"
            >
              <span
                class="mopen nulldelimiter"
              />
              <span
                class="mfrac"
              >
                <span
                  class="vlist-t vlist-t2"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 1.10756em;"
                    >
                      <span
                        class=""
                        style="top: -2.314em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathdefault"
                          >
                            b
                          </span>
                        </span>
                      </span>
                      <span
                        class=""
                        style="top: -3.23em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="frac-line"
                          style="border-bottom-width: 0.04em;"
                        />
                      </span>
                      <span
                        class=""
                        style="top: -3.677em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathdefault"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="vlist-s"
                    >
                      ​
                    </span>
                  </span>
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 0.686em;"
                    >
                      <span
                        class=""
                      />
                    </span>
                  </span>
                </span>
              </span>
              <span
                class="mclose nulldelimiter"
              />
            </span>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`AutoLaTeX should render expressions with "\\( \\)" delimiter 1`] = `
<div
  class=""
>
  <span>
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math>
          <semantics>
            <mrow>
              <mfrac>
                <mi>
                  a
                </mi>
                <mi>
                  b
                </mi>
              </mfrac>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\frac{a}{b}
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height: 1.040392em; vertical-align: -0.345em;"
          />
          <span
            class="mord"
          >
            <span
              class="mopen nulldelimiter"
            />
            <span
              class="mfrac"
            >
              <span
                class="vlist-t vlist-t2"
              >
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.695392em;"
                  >
                    <span
                      class=""
                      style="top: -2.6550000000000002em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            b
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class=""
                      style="top: -3.23em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="frac-line"
                        style="border-bottom-width: 0.04em;"
                      />
                    </span>
                    <span
                      class=""
                      style="top: -3.394em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="vlist-s"
                  >
                    ​
                  </span>
                </span>
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.345em;"
                  >
                    <span
                      class=""
                    />
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mclose nulldelimiter"
            />
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`AutoLaTeX should render expressions with "\\[ \\]" delimiter 1`] = `
<div
  class=""
>
  <span>
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math>
            <semantics>
              <mrow>
                <mfrac>
                  <mi>
                    a
                  </mi>
                  <mi>
                    b
                  </mi>
                </mfrac>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                \\frac{a}{b}
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height: 1.7935600000000003em; vertical-align: -0.686em;"
            />
            <span
              class="mord"
            >
              <span
                class="mopen nulldelimiter"
              />
              <span
                class="mfrac"
              >
                <span
                  class="vlist-t vlist-t2"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 1.10756em;"
                    >
                      <span
                        class=""
                        style="top: -2.314em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathdefault"
                          >
                            b
                          </span>
                        </span>
                      </span>
                      <span
                        class=""
                        style="top: -3.23em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="frac-line"
                          style="border-bottom-width: 0.04em;"
                        />
                      </span>
                      <span
                        class=""
                        style="top: -3.677em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathdefault"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="vlist-s"
                    >
                      ​
                    </span>
                  </span>
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 0.686em;"
                    >
                      <span
                        class=""
                      />
                    </span>
                  </span>
                </span>
              </span>
              <span
                class="mclose nulldelimiter"
              />
            </span>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`AutoLaTeX should render expressions with HTML rich text 1`] = `
<div
  class=""
>
  <div>
    
        
    <p>
      exp1: 
      <span>
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              class="katex-mathml"
            >
              <math>
                <semantics>
                  <mrow>
                    <mfrac>
                      <mi>
                        a
                      </mi>
                      <mi>
                        b
                      </mi>
                    </mfrac>
                  </mrow>
                  <annotation
                    encoding="application/x-tex"
                  >
                    \\frac{a}{b}
                  </annotation>
                </semantics>
              </math>
            </span>
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1.7935600000000003em; vertical-align: -0.686em;"
                />
                <span
                  class="mord"
                >
                  <span
                    class="mopen nulldelimiter"
                  />
                  <span
                    class="mfrac"
                  >
                    <span
                      class="vlist-t vlist-t2"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 1.10756em;"
                        >
                          <span
                            class=""
                            style="top: -2.314em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 3em;"
                            />
                            <span
                              class="mord"
                            >
                              <span
                                class="mord mathdefault"
                              >
                                b
                              </span>
                            </span>
                          </span>
                          <span
                            class=""
                            style="top: -3.23em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 3em;"
                            />
                            <span
                              class="frac-line"
                              style="border-bottom-width: 0.04em;"
                            />
                          </span>
                          <span
                            class=""
                            style="top: -3.677em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 3em;"
                            />
                            <span
                              class="mord"
                            >
                              <span
                                class="mord mathdefault"
                              >
                                a
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="vlist-s"
                        >
                          ​
                        </span>
                      </span>
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.686em;"
                        >
                          <span
                            class=""
                          />
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="mclose nulldelimiter"
                  />
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </p>
    
        
    <div>
      
          
      <h3>
        exp2: 
        <span>
          <span
            class="katex-display"
          >
            <span
              class="katex"
            >
              <span
                class="katex-mathml"
              >
                <math>
                  <semantics>
                    <mrow>
                      <mfrac>
                        <mi>
                          a
                        </mi>
                        <mi>
                          b
                        </mi>
                      </mfrac>
                    </mrow>
                    <annotation
                      encoding="application/x-tex"
                    >
                      \\frac{a}{b}
                    </annotation>
                  </semantics>
                </math>
              </span>
              <span
                aria-hidden="true"
                class="katex-html"
              >
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height: 1.7935600000000003em; vertical-align: -0.686em;"
                  />
                  <span
                    class="mord"
                  >
                    <span
                      class="mopen nulldelimiter"
                    />
                    <span
                      class="mfrac"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 1.10756em;"
                          >
                            <span
                              class=""
                              style="top: -2.314em;"
                            >
                              <span
                                class="pstrut"
                                style="height: 3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord mathdefault"
                                >
                                  b
                                </span>
                              </span>
                            </span>
                            <span
                              class=""
                              style="top: -3.23em;"
                            >
                              <span
                                class="pstrut"
                                style="height: 3em;"
                              />
                              <span
                                class="frac-line"
                                style="border-bottom-width: 0.04em;"
                              />
                            </span>
                            <span
                              class=""
                              style="top: -3.677em;"
                            >
                              <span
                                class="pstrut"
                                style="height: 3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord mathdefault"
                                >
                                  a
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 0.686em;"
                          >
                            <span
                              class=""
                            />
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mclose nulldelimiter"
                    />
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </h3>
      
          
      <p>
        
            
        <span>
          exp3: 
        </span>
        
            
        <span>
          <span>
            <span
              class="katex"
            >
              <span
                class="katex-mathml"
              >
                <math>
                  <semantics>
                    <mrow>
                      <mfrac>
                        <mi>
                          a
                        </mi>
                        <mi>
                          b
                        </mi>
                      </mfrac>
                    </mrow>
                    <annotation
                      encoding="application/x-tex"
                    >
                      \\frac{a}{b}
                    </annotation>
                  </semantics>
                </math>
              </span>
              <span
                aria-hidden="true"
                class="katex-html"
              >
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height: 1.040392em; vertical-align: -0.345em;"
                  />
                  <span
                    class="mord"
                  >
                    <span
                      class="mopen nulldelimiter"
                    />
                    <span
                      class="mfrac"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 0.695392em;"
                          >
                            <span
                              class=""
                              style="top: -2.6550000000000002em;"
                            >
                              <span
                                class="pstrut"
                                style="height: 3em;"
                              />
                              <span
                                class="sizing reset-size6 size3 mtight"
                              >
                                <span
                                  class="mord mtight"
                                >
                                  <span
                                    class="mord mathdefault mtight"
                                  >
                                    b
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span
                              class=""
                              style="top: -3.23em;"
                            >
                              <span
                                class="pstrut"
                                style="height: 3em;"
                              />
                              <span
                                class="frac-line"
                                style="border-bottom-width: 0.04em;"
                              />
                            </span>
                            <span
                              class=""
                              style="top: -3.394em;"
                            >
                              <span
                                class="pstrut"
                                style="height: 3em;"
                              />
                              <span
                                class="sizing reset-size6 size3 mtight"
                              >
                                <span
                                  class="mord mtight"
                                >
                                  <span
                                    class="mord mathdefault mtight"
                                  >
                                    a
                                  </span>
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 0.345em;"
                          >
                            <span
                              class=""
                            />
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mclose nulldelimiter"
                    />
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
        
          
      </p>
      
        
    </div>
    
      
  </div>
</div>
`;

exports[`AutoLaTeX should render expressions with multi-delimiters 1`] = `
<div
  class=""
>
  multi delimiters: 
  <span>
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math>
            <semantics>
              <mrow>
                <mfrac>
                  <mi>
                    a
                  </mi>
                  <mi>
                    b
                  </mi>
                </mfrac>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                \\frac{a}{b}
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height: 1.7935600000000003em; vertical-align: -0.686em;"
            />
            <span
              class="mord"
            >
              <span
                class="mopen nulldelimiter"
              />
              <span
                class="mfrac"
              >
                <span
                  class="vlist-t vlist-t2"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 1.10756em;"
                    >
                      <span
                        class=""
                        style="top: -2.314em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathdefault"
                          >
                            b
                          </span>
                        </span>
                      </span>
                      <span
                        class=""
                        style="top: -3.23em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="frac-line"
                          style="border-bottom-width: 0.04em;"
                        />
                      </span>
                      <span
                        class=""
                        style="top: -3.677em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathdefault"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="vlist-s"
                    >
                      ​
                    </span>
                  </span>
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 0.686em;"
                    >
                      <span
                        class=""
                      />
                    </span>
                  </span>
                </span>
              </span>
              <span
                class="mclose nulldelimiter"
              />
            </span>
          </span>
        </span>
      </span>
    </span>
  </span>
   
  <span>
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math>
            <semantics>
              <mrow>
                <mfrac>
                  <mi>
                    a
                  </mi>
                  <mi>
                    b
                  </mi>
                </mfrac>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                \\frac{a}{b}
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height: 1.7935600000000003em; vertical-align: -0.686em;"
            />
            <span
              class="mord"
            >
              <span
                class="mopen nulldelimiter"
              />
              <span
                class="mfrac"
              >
                <span
                  class="vlist-t vlist-t2"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 1.10756em;"
                    >
                      <span
                        class=""
                        style="top: -2.314em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathdefault"
                          >
                            b
                          </span>
                        </span>
                      </span>
                      <span
                        class=""
                        style="top: -3.23em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="frac-line"
                          style="border-bottom-width: 0.04em;"
                        />
                      </span>
                      <span
                        class=""
                        style="top: -3.677em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathdefault"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="vlist-s"
                    >
                      ​
                    </span>
                  </span>
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 0.686em;"
                    >
                      <span
                        class=""
                      />
                    </span>
                  </span>
                </span>
              </span>
              <span
                class="mclose nulldelimiter"
              />
            </span>
          </span>
        </span>
      </span>
    </span>
  </span>
    
  <span>
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math>
          <semantics>
            <mrow>
              <mfrac>
                <mi>
                  a
                </mi>
                <mi>
                  b
                </mi>
              </mfrac>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\frac{a}{b}
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height: 1.040392em; vertical-align: -0.345em;"
          />
          <span
            class="mord"
          >
            <span
              class="mopen nulldelimiter"
            />
            <span
              class="mfrac"
            >
              <span
                class="vlist-t vlist-t2"
              >
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.695392em;"
                  >
                    <span
                      class=""
                      style="top: -2.6550000000000002em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            b
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class=""
                      style="top: -3.23em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="frac-line"
                        style="border-bottom-width: 0.04em;"
                      />
                    </span>
                    <span
                      class=""
                      style="top: -3.394em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="vlist-s"
                  >
                    ​
                  </span>
                </span>
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.345em;"
                  >
                    <span
                      class=""
                    />
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mclose nulldelimiter"
            />
          </span>
        </span>
      </span>
    </span>
  </span>
   
  <span>
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math>
          <semantics>
            <mrow>
              <mfrac>
                <mi>
                  a
                </mi>
                <mi>
                  b
                </mi>
              </mfrac>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\frac{a}{b}
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height: 1.040392em; vertical-align: -0.345em;"
          />
          <span
            class="mord"
          >
            <span
              class="mopen nulldelimiter"
            />
            <span
              class="mfrac"
            >
              <span
                class="vlist-t vlist-t2"
              >
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.695392em;"
                  >
                    <span
                      class=""
                      style="top: -2.6550000000000002em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            b
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class=""
                      style="top: -3.23em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="frac-line"
                        style="border-bottom-width: 0.04em;"
                      />
                    </span>
                    <span
                      class=""
                      style="top: -3.394em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="vlist-s"
                  >
                    ​
                  </span>
                </span>
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.345em;"
                  >
                    <span
                      class=""
                    />
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mclose nulldelimiter"
            />
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`AutoLaTeX should render expressions with option "delimiters" 1`] = `
<div
  class=""
>
  multi delimiters: 
  <span>
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math>
          <semantics>
            <mrow>
              <mfrac>
                <mi>
                  a
                </mi>
                <mi>
                  b
                </mi>
              </mfrac>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\frac{a}{b}
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height: 1.040392em; vertical-align: -0.345em;"
          />
          <span
            class="mord"
          >
            <span
              class="mopen nulldelimiter"
            />
            <span
              class="mfrac"
            >
              <span
                class="vlist-t vlist-t2"
              >
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.695392em;"
                  >
                    <span
                      class=""
                      style="top: -2.6550000000000002em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            b
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class=""
                      style="top: -3.23em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="frac-line"
                        style="border-bottom-width: 0.04em;"
                      />
                    </span>
                    <span
                      class=""
                      style="top: -3.394em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="vlist-s"
                  >
                    ​
                  </span>
                </span>
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.345em;"
                  >
                    <span
                      class=""
                    />
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mclose nulldelimiter"
            />
          </span>
        </span>
      </span>
    </span>
  </span>
   \\[\\frac{a}{b}\\]  
  <span>
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math>
          <semantics>
            <mrow>
              <mfrac>
                <mi>
                  a
                </mi>
                <mi>
                  b
                </mi>
              </mfrac>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\frac{a}{b}
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height: 1.040392em; vertical-align: -0.345em;"
          />
          <span
            class="mord"
          >
            <span
              class="mopen nulldelimiter"
            />
            <span
              class="mfrac"
            >
              <span
                class="vlist-t vlist-t2"
              >
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.695392em;"
                  >
                    <span
                      class=""
                      style="top: -2.6550000000000002em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            b
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class=""
                      style="top: -3.23em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="frac-line"
                        style="border-bottom-width: 0.04em;"
                      />
                    </span>
                    <span
                      class=""
                      style="top: -3.394em;"
                    >
                      <span
                        class="pstrut"
                        style="height: 3em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mord mtight"
                        >
                          <span
                            class="mord mathdefault mtight"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="vlist-s"
                  >
                    ​
                  </span>
                </span>
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height: 0.345em;"
                  >
                    <span
                      class=""
                    />
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mclose nulldelimiter"
            />
          </span>
        </span>
      </span>
    </span>
  </span>
   \\(\\frac{a}{b}\\)
</div>
`;
